Cambios en la foto

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <nav>
-        <div class="container_nombre">
-            <h1>GIANFRANCO BARRIOS</h1>
-        </div>
         <div class="container_link">
-            <a href="">Estudios</a>
-            <a href="">Experiencia</a>
-            <a href="">Proyectos</a>
-            <a href="">Sobre Mi</a>
-            <a href="">Contacto</a>            
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Services</a>
+            <a href="">Portafolio</a>
+            <a href="">Blog</a>  
+            <a href="">Contact</a>          
         </div>
         <div class="container_button">
             <button>Descargar CV</button>
@@ -34,6 +32,10 @@
     <div class="container_body">
         <div class="container_foto">
             <img src=".\\Imagenes\\Foto.jpeg" alt="">
+        </div>
+        <div class="container_presentacion">
+            <h2>Hola, Yo soy</h2>
+            <h1>GIANFRANCO BARRIOS</h1>
         </div>
     </div>
     
