Creacion de la Descripcion

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <div class="container_presentacion">
             <h2>Hola, Yo soy</h2>
             <h1>GIANFRANCO BARRIOS</h1>
+            <h3>Programador Frontend, HTML Coder</h3>
+            <h3>Programador PHP, Asistende de informatica</h3>
         </div>
     </div>
     
