edicion del boton descargar cv

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
         <a href="">Proyectos</a>
         <a href="">Sobre Mi</a>
         <a href="">Contacto</a>
-        <a href=""><button>Descargar CV</button></a>
+        <div class="container_button">
+            <a href=".\\Imagenes\\Gianfranco Barrios.pdf" download="CV_Gianfranco">
+                <button>Descargar CV</button>
+            </a>
+        </div>
     </div>
     <div class="container_body">
             <div class="container_foto">
@@ -61,6 +65,10 @@
             <div class="container_edad">
                 <div class="edad">Edad:</div>
                 <div class="edad_num">25</div>
+            </div>
+            <div class="container_pais">
+                <div class="pais">Pais: </div>
+                <div class="pains_ubi">Guatemala</div>
             </div>
             <div class="container_residencia">
                 <div class="residencia">Residencia:</div>
