edicion del boton descargar cv

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="">Sobre Mi</a>
         <a href="">Contacto</a>
         <div class="container_button">
-            <a href=".\\Imagenes\\Gianfranco Barrios.pdf" download="CV_Gianfranco">
+            <a href=".\\Imagenes\\Gianfranco_Barrios.pdf" download="CV_Gianfranco">
                 <button>Descargar CV</button>
             </a>
         </div>
