creacion de la experiencia profesional en reponsive

--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
                 <div class="container_fechas">
                         <h3>Del 01/03/2018
                             Al 16/11/2020
+                        </h3>
+                        <h3>
                             Aldea los encuentros
-                            Coatepeque</h3>
+                        </h3>
                 </div>
                 <div class="container_descripcion">
                     <h1>Fundacion para la salud integral de los Guatemaltecos</h1>
@@ -144,8 +146,10 @@
                 <div class="container_fechas">
                     <h3>Del 04/05/2021
                         Al 31/12/2022
-                        Aldea los encuentros
-                        Coatepeque</h3>
+                    </h3>
+                    <h3>
+                        Mazatenango, San marcos
+                    </h3>
                 </div>
                 <div class="container_descripcion">
                     <h1>Puente de Amistad </h1>
@@ -159,6 +163,8 @@
                 <div class="container_fechas">
                     <h3>Del 01/03/2023
                         Hasta la fecha
+                    </h3>
+                    <h3>
                         San vicente pacaya, coatepeque    
                     </h3>
                 </div>
