edicion del boton descargar cv funcional

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <a href="">Contact</a>          
         </div>
         <div class="container_button">
-            <button>Descargar CV</button>
+            <a href=".\\Imagenes\\Gianfranco_Barrios.pdf" download="CV_Gianfranco">
+                <button>Descargar CV</button>
+            </a>
         </div>
         <button class="menu-button" onclick="toggleMenu()">Menu</button>
     </nav>
