Agregamos tienda la economica

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
     <div class="container_proyectos">
         <div class="proyectos">
             <h1>MIS PROYECTOS</h1>
+            <div container="proyectos">
+                <h3>Login funcional</h3>
+                <a href=".\\Frutas\\index.html">Tienda la Economica</a>
+            </div>
         </div>
         <div class="experiencia">
             <h1>Experiencia profesional</h1>
