correcion la economica

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h1>MIS PROYECTOS</h1>
             <div container="proyectos">
                 <h3>Login funcional</h3>
-                <a href=".\\Frutas\\index.html">Tienda la Economica</a>
+                <a href=".\\Economica\\index.html">Tienda la Economica</a>
             </div>
         </div>
         <div class="experiencia">
@@ -143,7 +143,7 @@
                     <h2>Tecnico IT</h2>
                     <h2>Tareas realizadas:</h2>
                     <h3>Control de conexiones a la red, mantenimiento de 
-                        computadoras, manego de pagina web en weebly y facebook
+                        computadoras, manejo de pagina web en weebly y facebook
                         control de vehiculos, control y manejo de bodega                   
                         apoyo en area administrativa, encargado de camaras de seguridad
                         y equipos telefonicos 
