arreglo del index en la economica

--- a/Economica/index.html
+++ b/Economica/index.html
@@ -23,9 +23,12 @@
                 </div>
                 <a href="">Olvidaste tu contraseña?</a>
                 <div class="container_button">
-                    <button type="submit" id="ingresar">Ingresar</button>
+                    <button type="submit" id="ingresar" class="ingresar">Ingresar</button>
                 </div>
             </form>
+            <div class="container_button">
+                <button id="registrarse" class="registrarse">Registrarse</button>
+            </div>
         </div>
     </div>
     <script type="module" src=".\\index.js"></script>
