Login y registro de nuevos usuarios funcionando correctamente

--- a/Economica/index.html
+++ b/Economica/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="continer_form">
             <form action="" id="loginForm">
-                <img src=".\\imagenes\\logo.png" alt="">
+                <img src="../Economica/imagenes/logo.png" alt="">
                 <h3>Tienda la Autentica</h3>
                 <div class="container_usuario">
                     <i class='bx bx-user-circle'></i>
