modificacion el index.html para que sea por botones los ingresos a los proyectos

--- a/Economica/index.html
+++ b/Economica/index.html
@@ -29,6 +29,9 @@
             <div class="container_button">
                 <button id="registrarse" class="registrarse">Registrarse</button>
             </div>
+            <div class="container_button">
+                <button id="regresar" class="regresar">Regresar</button>
+            </div>
         </div>
     </div>
     <script type="module" src=".\\index.js"></script>
