modificacion en el display

--- a/Economica/frutas/display.html
+++ b/Economica/frutas/display.html
@@ -1,1 +1,84 @@
-<h1>Bienvenido</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href=".\\display.css">
+    <title>Document</title>
+</head>
+<body>
+    <nav class="sidebar">
+        <div class="logo-menu">
+            <h2 class="logo">La Economica</h2>
+            <i class='bx bx-menu toggle-btn'></i>
+        </div>
+        <ul class="list">
+            <li class="list-item active">
+                <a href="#">
+                    <i class='bx bx-grid-alt'></i>
+                    <span class="link-name" style="--i:1;">Dashboard</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-user' ></i>
+                    <span class="link-name" style="--i:2;">Usuarios</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-comment-dots' ></i>
+                    <span class="link-name" style="--i:3;">Mensajes</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-pie-chart-alt-2' ></i>
+                    <span class="link-name" style="--i:4;">Analisis</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-folder' ></i>
+                    <span class="link-name" style="--i:5;">File Manager</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-cart-add' ></i>
+                    <span class="link-name" style="--i:6;">Orden</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-save' ></i>
+                    <span class="link-name" style="--i:7;">Guardar</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bxs-cog' ></i>
+                    <span class="link-name" style="--i:8;">Configuracion</span>
+                </a>
+            </li>
+        </ul>
+
+    </nav>
+    <script src=".\\display.js"></script>
+</body>
+</html>
