configuracion del display

--- a/Economica/frutas/display.html
+++ b/Economica/frutas/display.html
@@ -31,25 +31,25 @@
         </ul>
         <ul class="list">
             <li class="list-item">
-                <a href="#">
-                    <i class='bx bx-comment-dots' ></i>
-                    <span class="link-name" style="--i:3;">Mensajes</span>
+                <a href="#" id="agregar">
+                    <i class='bx bx-book-add'></i>
+                    <span class="link-name" style="--i:3;">Agregar</span>
                 </a>
             </li>
         </ul>
         <ul class="list">
             <li class="list-item">
                 <a href="#">
-                    <i class='bx bx-pie-chart-alt-2' ></i>
-                    <span class="link-name" style="--i:4;">Analisis</span>
+                    <i class='bx bx-cart-add' ></i>
+                    <span class="link-name" style="--i:4;">Comprar</span>
                 </a>
             </li>
         </ul>
         <ul class="list">
             <li class="list-item">
                 <a href="#">
-                    <i class='bx bx-folder' ></i>
-                    <span class="link-name" style="--i:5;">File Manager</span>
+                    <i class='bx bx-briefcase-alt-2' ></i>
+                    <span class="link-name" style="--i:5;">Vender</span>
                 </a>
             </li>
         </ul>
@@ -71,13 +71,12 @@
         </ul>
         <ul class="list">
             <li class="list-item">
-                <a href="#">
-                    <i class='bx bxs-cog' ></i>
-                    <span class="link-name" style="--i:8;">Configuracion</span>
+                <a href="../index.html">
+                    <i class='bx bx-log-out'></i>
+                    <span class="link-name" style="--i:8;"> Salir</span>
                 </a>
             </li>
         </ul>
-
     </nav>
     <script src=".\\display.js"></script>
 </body>
