--- a/Economica/files/agregar.html
+++ b/Economica/files/agregar.html
@@ -9,12 +9,13 @@
 <body>
     <div class="container">
         <div class="form-container">
+            <h1>Ingrese el nuevo producto</h1>
             <input type="text" placeholder="Nombre">
             <input type="text" placeholder="cantidad">
             <input type="text" placeholder="precio">
-            <input type="date" placeholder="fecha de compra">
             <input type="text" placeholder="Proveedor">
-            <input type="text" placeholder="factura">
+            <input type="text" placeholder="Factura">
+            <input type="text" placeholder="Categoria">
             <div class="container-button">
                 <button type="submit">Guardar</button>
             </div>
