--- a/Economica/frutas/display.html
+++ b/Economica/frutas/display.html
@@ -17,7 +17,7 @@
             <li class="list-item active">
                 <a href="#">
                     <i class='bx bx-grid-alt'></i>
-                    <span class="link-name" style="--i:1;">Dashboard</span>
+                    <span class="link-name" style="--i:1;">Productos</span>
                 </a>
             </li>
         </ul>
@@ -31,7 +31,7 @@
         </ul>
         <ul class="list">
             <li class="list-item">
-                <a href="#" id="agregar">
+                <a href="#" id="btn-agregar">
                     <i class='bx bx-book-add'></i>
                     <span class="link-name" style="--i:3;">Agregar</span>
                 </a>
@@ -78,6 +78,7 @@
             </li>
         </ul>
     </nav>
+    <div id="contenido"></div>
     <script src=".\\display.js"></script>
 </body>
 </html>
