creacion del proyecto funsalud

--- a/Funsalud/frontend/index.html
+++ b/Funsalud/frontend/index.html
@@ -68,6 +68,9 @@
             </div>
         </div>
     </div>
+    <div class="container-mision">
+        
+    </div>
     
     <script type="module" src=".\\index.js" defer></script>
 </body>
