creacion del proyecto funsalud

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h1>MIS PROYECTOS</h1>
             <div container="proyectos">
                 <div class="containerButton">
-                    <button id="econimica" class="economica">Tienda la Economica</button>
+                    <button id="econimica" class="economica">Funsalud</button>
                 </div>
             </div>
         </div>
