Terminando de modificar el fanpage, comenzando con la conexion a la BD

--- a/Funsalud/frontend/index.html
+++ b/Funsalud/frontend/index.html
@@ -14,18 +14,19 @@
                 <i class='bx bx-plus-medical'></i>
             </div>
             <div class="container-list">
-                <a href="">Nuestra Historia</a>
-                <a href="">Mision</a>
-                <a href=""> Vision</a>
-                <a href=""> Quienes Somos</a>
-                <a href="">Proyectos</a>
+                <a href="#historia">Nuestra Historia</a>
+                <a href="#mision">Mision</a>
+                <a href="#vision"> Vision</a>
+                <a href="#somos"> Quienes Somos</a>
+                <a href="#proyectos">Proyectos</a>
             </div>
             <div class="container-button">
-                <button class="Ingresar">Ingresar</button>
+                <button id="ingresar" class="Ingresar">Ingresar</button>
             </div>
         </div>
     </nav>
     <div class="container-carousel">
+        <h1>Somos Funsalud</h1>
         <div class="slider-wrapper">
             <button id="prev-slide" class="slide-button material-symbols-rounded">prev</button>
             <div class="image-list">
@@ -65,11 +66,85 @@
               <div class="scrollbar-track">
                    <div class="scrollbar-thumb"></div>
               </div>
-            </div>
         </div>
     </div>
-    <div class="container-mision">
-        
+    <div class="container-valores">
+        <h2 id="historia"> NUESTRA HISTORIA</h2>
+        <div class="container-mision">
+            <div class="mision-text">
+                <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    It has survived not only five centuries, but also the leap into electronic typesetting,
+                     remaining essentially unchanged. It was popularised in the 1960s with the release of 
+                     Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+                     software like Aldus PageMaker including versions of Lorem Ipsum.</h3>
+            </div>
+            <div class="mision-image">
+                <img src="../Imagenes/Montaña1.jpg" alt="">
+            </div>
+        </div>
+        <h2 id="mision">NUESTRA MISION</h2>
+        <div class="container-mision">
+            <div class="mision-image">
+                <img src="../Imagenes/Montaña1.jpg" alt="">
+            </div>
+            <div class="mision-text">
+                <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    It has survived not only five centuries, but also the leap into electronic typesetting,
+                     remaining essentially unchanged. It was popularised in the 1960s with the release of 
+                     Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+                     software like Aldus PageMaker including versions of Lorem Ipsum.</h3>
+            </div>
+        </div>
+        <h2 id="vision">NUESTA VISION</h2>
+        <div class="container-mision">
+            <div class="mision-text">
+                <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    It has survived not only five centuries, but also the leap into electronic typesetting,
+                     remaining essentially unchanged. It was popularised in the 1960s with the release of 
+                     Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+                     software like Aldus PageMaker including versions of Lorem Ipsum.</h3>
+            </div>
+            <div class="mision-image">
+                <img src="../Imagenes/Montaña1.jpg" alt="">
+            </div>
+        </div>
+        <h2 id="somos">QUIENES SOMOS</h2>
+        <div class="container-mision">
+            <div class="mision-image">
+                <img src="../Imagenes/Montaña1.jpg" alt="">
+            </div>
+            <div class="mision-text">
+                <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    It has survived not only five centuries, but also the leap into electronic typesetting,
+                     remaining essentially unchanged. It was popularised in the 1960s with the release of 
+                     Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+                     software like Aldus PageMaker including versions of Lorem Ipsum.</h3>
+            </div>
+        </div>
+        <h2 id="proyectos">NUESTROS PROYECTOS</h2>
+        <div class="container-mision">
+            <div class="mision-text">
+                <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    It has survived not only five centuries, but also the leap into electronic typesetting,
+                     remaining essentially unchanged. It was popularised in the 1960s with the release of 
+                     Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
+                     software like Aldus PageMaker including versions of Lorem Ipsum.</h3>
+            </div>
+            <div class="mision-image">
+                <img src="../Imagenes/Montaña1.jpg" alt="">
+            </div>
+        </div>
+
     </div>
     
     <script type="module" src=".\\index.js" defer></script>
