arreglo de la imagen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container-image">
-        <img src=".\\imagenes\\Boda5.jpeg" alt="">
+        <img src="./imagenes/boda5.jpeg" alt="">
         <h2>Nos Casamos</h2>
         <h3>Gianfranco y Claudia </h3>
     </div>
