gif de los anillos

--- a/index.html
+++ b/index.html
@@ -39,8 +39,22 @@
         <div class="container-seconds">
             <span id="seconds"></span>
         </div>
-
-    
+        <div class="dias">
+            <span>Dias</span>
+        </div>
+        <div class="horas">
+            <span>Horas</span>
+        </div>
+        <div class="minutos">
+            <span>Minutos</span>
+        </div>
+        <div class="segundos">
+            Segundos
+        </div>
+    </div>
+    <div class="container-ring">
+        <img src="./imagenes/anillo.gif" alt="">
+    </div>
         <script src="./index.js"></script>
 </body>
 
