modificacion del anillo

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
         </div>
     </div>
     <div class="container-ring">
-        <img src="./imagenes/anillo.gif" alt="">
+        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+
+    <dotlottie-player src="https://lottie.host/1b9f6bbc-a827-4bdd-8cc0-28b51f8c83bc/FhYSYGZKc7.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
+        
     </div>
-        <script src="./index.js"></script>
+    
+    <script src="./index.js"></script>
 </body>
 
 </html>
