--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
     <div class="container-ring">
         <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
 
-    <dotlottie-player src="https://lottie.host/1b9f6bbc-a827-4bdd-8cc0-28b51f8c83bc/FhYSYGZKc7.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
-        
+     <dotlottie-player class="ring" src="https://lottie.host/1b9f6bbc-a827-4bdd-8cc0-28b51f8c83bc/FhYSYGZKc7.json" 
+     background="transparent" speed="1" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
+    </div>
+    <div class="container-ceremonia">
+        <h2 class="ceremonia">CEREMONIA</h2>
     </div>
     
     <script src="./index.js"></script>
