--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
     </div>
     <div class="container-ceremonia">
         <h2 class="ceremonia">CEREMONIA</h2>
+        <h4>Iglesia Principe de paz</h4>
+        <h4>Te esperamos el</h4>
+        <div class="container-fecha">
+            <h2>21 DIC</h2>
+            <h2>4:00 PM</h2>
+        </div>
+        <h4>Aldea las palmas</h4>
+        <h4>Coatepeque</h4>
+        <button>VER UBICACION
+            <a href=""></a>
+        </button>
     </div>
     
     <script src="./index.js"></script>
