--- a/index.html
+++ b/index.html
@@ -60,20 +60,28 @@
     </div>
     <div class="container-ceremonia">
         <h2 class="ceremonia">CEREMONIA</h2>
-        <h4>Iglesia Principe de paz</h4>
-        <h4>Te esperamos el</h4>
+        <h4 class="iglesia">Iglesia Principe de paz</h4>
+        <h4 class="esperamos">Te esperamos el</h4>
         <div class="container-fecha">
             <h2>21 DIC</h2>
             <h2>4:00 PM</h2>
         </div>
-        <h4>Aldea las palmas</h4>
-        <h4>Coatepeque</h4>
-        <button>VER UBICACION
-            <a href=""></a>
-        </button>
+        <h4 class="aldea">Aldea las palmas</h4>
+        <h4 class="coatepeque">Coatepeque</h4>
+        <div class="container-ubicacion">
+            <button class="ubicacion" onclick="redirectToMaps()">VER UBICACION</button>
+        </div>
     </div>
     
+    <div class="container-copas">
+        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+
+    <dotlottie-player src="https://lottie.host/5c6cc5d9-6865-455c-9a94-2d089c04b7d9/p8tw5NwLvJ.json" background="transparent" speed="0.5" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
+    </div>
     <script src="./index.js"></script>
 </body>
+<footer>
+
+</footer>
 
 </html>
