--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             Segundos
         </div>
     </div>
+
     <div class="container-ring">
         <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
 
@@ -75,8 +76,10 @@
     
     <div class="container-copas">
         <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
-
     <dotlottie-player src="https://lottie.host/5c6cc5d9-6865-455c-9a94-2d089c04b7d9/p8tw5NwLvJ.json" background="transparent" speed="0.5" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
+    </div>
+    <div class="container-celebracion">
+        
     </div>
     <script src="./index.js"></script>
 </body>
