--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     </div>
     <div class="container-invitados">
         <h1>Estas Invitado!</h1>
-        <h2>Queremos que seas parte de este 
-            momento tan especial.
-        </h2>
+        <h2>Queremos que seas parte de este </h2>
+        <h2>Momento tan especial</h2>
     </div>
     <div class="countdown">
 
