creando el boton de fotos

--- a/index.html
+++ b/index.html
@@ -77,9 +77,32 @@
         <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
     <dotlottie-player src="https://lottie.host/5c6cc5d9-6865-455c-9a94-2d089c04b7d9/p8tw5NwLvJ.json" background="transparent" speed="0.5" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
     </div>
-    <div class="container-celebracion">
-        
+    <div class="container-ceremonia">
+        <h2 class="ceremonia">CELEBRACION</h2>
+        <h4 class="iglesia">Iglesia Principe de paz</h4>
+        <h4 class="esperamos">la celebracion sera el</h4>
+        <div class="container-fecha">
+            <h2>21 DIC</h2>
+            <h2>5:00 PM</h2>
+        </div>
+        <h4 class="aldea">Aldea las palmas</h4>
+        <h4 class="coatepeque">Coatepeque</h4>
+        <div class="container-ubicacion">
+            <button class="ubicacion" onclick="redirectToMaps()">VER UBICACION</button>
+        </div>
     </div>
+    <div class="container-foto">
+        <div class="foto">
+            <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+            <dotlottie-player src="https://lottie.host/1a23be6a-f7af-4442-95ec-9a641dc8e105/X01Rp3Fz2C.json" background="transparent" speed="0.7" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
+        </div>
+        <h1>Comparte tus fotos</h1>
+        <h3>Sube las fotos de la boda al album</h3>
+        <div class="container-link">
+            <button onclick="redirectToLink()">Ir al enlace</button>
+        </div>
+    </div>
+    
     <script src="./index.js"></script>
 </body>
 <footer>
