estilos al boton

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h1>Comparte tus fotos</h1>
         <h3>Sube las fotos de la boda al album</h3>
         <div class="container-link">
-            <button onclick="redirectToLink()">Ir al enlace</button>
+            <button class="ubicacion" onclick="redirectToLink()">Ir al enlace</button>
         </div>
     </div>
     
