--- a/index.html
+++ b/index.html
@@ -99,7 +99,17 @@
         <h1>Comparte tus fotos</h1>
         <h3>Sube las fotos de la boda al album</h3>
         <div class="container-link">
-            <button class="ubicacion" onclick="redirectToLink()">Ir al enlace</button>
+            <button class="link-fotos" onclick="redirectToLink()">Sube tus fotos</button>
+            <button class="link-album" onclick="redirectToLink()">Ver Galeria</button>
+        </div>
+    </div>
+    <div class="container-nosotros">
+        <h2>NOSOTROS</h2>
+        <div class="imagenes">
+            <img src="./imagenes/Boda 1.jpeg" alt="">
+            <img src="./imagenes/Boda3.jpeg" alt="">
+            <img src="./imagenes/Boda2.jpeg" alt="">
+            <img src="./imagenes/boda4.jpeg" alt="">
         </div>
     </div>
     
