--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <dotlottie-player src="https://lottie.host/5c6cc5d9-6865-455c-9a94-2d089c04b7d9/p8tw5NwLvJ.json" background="transparent" speed="0.5" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
     </div>
     <div class="container-ceremonia">
-        <h2 class="ceremonia">CELEBRACION</h2>
+        <h1 class="ceremonia">CELEBRACION</h1>
         <h4 class="iglesia">Iglesia Principe de paz</h4>
         <h4 class="esperamos">la celebracion sera el</h4>
         <div class="container-fecha">
@@ -112,11 +112,23 @@
             <img src="./imagenes/boda2.jpeg" alt="">
         </div>
     </div>
-    
+    <div class="container-regalo">
+        <div class="regalo">
+            <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+             <dotlottie-player src="https://lottie.host/65d5234b-c4a4-40bd-92bb-9e88b50c60b9/9Tk7QICXpw.json" background="transparent" speed="0.7" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
+        </div>
+        <h2>REGALOS</h2>
+        <h4>El regalo es opcional, la asistencia es obligatoria</h4>
+        <h4></h4>
+        <h4>pero si quieren tener un detalle con nosotros</h4>
+        <h4>que mejor regalo</h4>
+        <h4>que ayudarnos a construir nuestro futuro.</h4>
+    </div>
+    <div class="container-despedida">
+        <h1>Te esperamos</h1>
+        <h3>Gianfranco y Claudia</h3>
+    </div>
     <script src="./index.js"></script>
 </body>
-<footer>
-
-</footer>
 
 </html>
