--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <h2>Nos Casamos</h2>
         <h3>Gianfranco y Claudia </h3>
     </div>
+    <div class="container-audio">
+
+    </div>
     <div class="container-invitados">
         <h1>Estas Invitado!</h1>
         <h2>Queremos que seas parte de este </h2>
@@ -107,8 +110,8 @@
         <h2>NOSOTROS</h2>
         <div class="imagenes">
             <img src="./imagenes/Boda 1.jpeg" alt="">
-            <img src="./imagenes/Boda3.jpeg" alt="">
             <img src="./imagenes/Boda4.jpeg" alt="">
+            <img src="./imagenes/Boda3.jpeg" alt="">
             <img src="./imagenes/boda2.jpeg" alt="">
         </div>
     </div>
