--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <h2>Nos Casamos</h2>
         <h3>Gianfranco y Claudia </h3>
     </div>
-    <div class="container-audio">
-
+    <div class="container-audio" type="audio/mpeg">
+        <audio controls loop src="./audio/Love-in-mexico.mp3">
+        </audio>
     </div>
     <div class="container-invitados">
         <h1>Estas Invitado!</h1>
