modificacion del image

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
     <div class="container-nosotros">
         <h2>NOSOTROS</h2>
         <div class="imagenes">
-            <img src="./imagenes/Boda 1.jpeg" alt="">
-            <img src="./imagenes/Boda4.jpeg" alt="">
-            <img src="./imagenes/Boda4.jpeg" alt="">
+            <img src="./imagenes/Boda3.jpeg" alt="">
             <img src="./imagenes/boda 1.jpeg" alt="">
+            <img src="./imagenes/Boda2.jpeg" alt="">
+            <img src="./imagenes/boda4.jpeg" alt="">
         </div>
     </div>
     <div class="container-regalo">
