--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>Gianfranco y Claudia </h3>
     </div>
     <div class="container-audio" type="audio/mpeg">
-        <audio controls loop src="./audio/Love-in-mexico.mp3">
+        <audio autoplay controls loop src="./audio/Marry-you.mp3">
         </audio>
     </div>
     <div class="container-invitados">
