--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <h3>Gianfranco y Claudia </h3>
     </div>
     <div class="container-audio" type="audio/mpeg">
-        <audio autoplay controls loop>
-            <source src="./audio/marry-you.mp3">
+        <audio autoplay controls loop  src="./audio/marry-you.mp3">
         </audio>
     </div>
     <div class="container-invitados">
