--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <h2>Nos Casamos</h2>
         <h3>Gianfranco y Claudia </h3>
     </div>
-    <div class="container-audio" type="audio/mpeg">
-        <audio autoplay controls loop  src="./audio/marry-you.mp3">
+    <div class="container-audio" >
+        <audio autoplay controls loop>
+            <source src="./audio/Marry-you.mp3" type="audio/mpeg">
         </audio>
     </div>
     <div class="container-invitados">
