--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>Gianfranco y Claudia </h3>
     </div>
     <div class="container-audio" >
-        <audio autoplay controls loop>
+        <audio autobuffer controls loop>
             <source src="./audio/Marry-you.mp3" type="audio/mpeg">
         </audio>
     </div>
