--- a/index.html
+++ b/index.html
@@ -1,139 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuestra Boda</title>
-    <link rel="stylesheet" href="./index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Grey+Qo&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Grey+Qo&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="container-image">
-        <img src="./imagenes/boda5.jpeg" alt="">
-        <h2>Nos Casamos</h2>
-        <h3>Gianfranco y Claudia </h3>
+      <img src="./imagenes/Fondo.jpg" alt="" />
+      <h2>Nos Casamos</h2>
+      <h3>Gianfranco y Claudia</h3>
     </div>
-    <div class="container-audio" >
-        <audio autobuffer controls loop>
-            <source src="./audio/Marry-you.mp3" type="audio/mpeg">
-        </audio>
+    <div class="container-audio">
+      <audio autobuffer controls loop>
+        <source src="./audio/Marry-you.mp3" type="audio/mpeg" />
+      </audio>
     </div>
     <div class="container-invitados">
-        <h1>Estas Invitado!</h1>
-        <h2>Queremos que seas parte de este </h2>
-        <h2>Momento tan especial</h2>
+      <h1>Estas Invitado!</h1>
+      <h2>Queremos que seas parte de este</h2>
+      <h2>Momento tan especial</h2>
     </div>
     <div class="countdown">
+      <div class="container-days">
+        <span id="days"></span>
+      </div>
 
-        <div class="container-days">
-            <span id="days"></span>
-        </div>
-        
-        <div class="container-hours">
-            <span id="hours"></span>
-        </div>
-        <div class="container-minutes">
-            <span id="minutes"></span>
-        </div>
-        <div class="container-seconds">
-            <span id="seconds"></span>
-        </div>
-        <div class="dias">
-            <span>Dias</span>
-        </div>
-        <div class="horas">
-            <span>Horas</span>
-        </div>
-        <div class="minutos">
-            <span>Minutos</span>
-        </div>
-        <div class="segundos">
-            Segundos
-        </div>
+      <div class="container-hours">
+        <span id="hours"></span>
+      </div>
+      <div class="container-minutes">
+        <span id="minutes"></span>
+      </div>
+      <div class="container-seconds">
+        <span id="seconds"></span>
+      </div>
+      <div class="dias">
+        <span>Dias</span>
+      </div>
+      <div class="horas">
+        <span>Horas</span>
+      </div>
+      <div class="minutos">
+        <span>Minutos</span>
+      </div>
+      <div class="segundos">Segundos</div>
     </div>
 
     <div class="container-ring">
-        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+      <script
+        src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+        type="module"
+      ></script>
 
-     <dotlottie-player class="ring" src="https://lottie.host/1b9f6bbc-a827-4bdd-8cc0-28b51f8c83bc/FhYSYGZKc7.json" 
-     background="transparent" speed="1" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
+      <dotlottie-player
+        class="ring"
+        src="https://lottie.host/1b9f6bbc-a827-4bdd-8cc0-28b51f8c83bc/FhYSYGZKc7.json"
+        background="transparent"
+        speed="1"
+        style="width: 100%; height: 100%"
+        loop
+        autoplay
+      ></dotlottie-player>
     </div>
     <div class="container-ceremonia">
-        <h2 class="ceremonia">CEREMONIA</h2>
-        <h4 class="iglesia">Iglesia Principe de paz</h4>
-        <h4 class="esperamos">Te esperamos el</h4>
-        <div class="container-fecha">
-            <h2>21 DIC</h2>
-            <h2>4:00 PM</h2>
-        </div>
-        <h4 class="aldea">Aldea las palmas</h4>
-        <h4 class="coatepeque">Coatepeque</h4>
-        <div class="container-ubicacion">
-            <button class="ubicacion" onclick="redirectToMaps()">VER UBICACION</button>
-        </div>
+      <h2 class="ceremonia">CEREMONIA</h2>
+      <h4 class="iglesia">Iglesia Principe de paz</h4>
+      <h4 class="esperamos">Te esperamos el</h4>
+      <div class="container-fecha">
+        <h2>21 DIC</h2>
+        <h2>4:00 PM</h2>
+      </div>
+      <h4 class="aldea">Aldea las palmas</h4>
+      <h4 class="coatepeque">Coatepeque</h4>
+      <div class="container-ubicacion">
+        <button class="ubicacion" onclick="redirectToMaps()">
+          VER UBICACION
+        </button>
+      </div>
     </div>
-    
+
     <div class="container-copas">
-        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
-    <dotlottie-player src="https://lottie.host/5c6cc5d9-6865-455c-9a94-2d089c04b7d9/p8tw5NwLvJ.json" background="transparent" speed="0.5" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
+      <script
+        src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+        type="module"
+      ></script>
+      <dotlottie-player
+        src="https://lottie.host/5c6cc5d9-6865-455c-9a94-2d089c04b7d9/p8tw5NwLvJ.json"
+        background="transparent"
+        speed="0.5"
+        style="width: 100%; height: 100%"
+        loop
+        autoplay
+      ></dotlottie-player>
     </div>
     <div class="container-ceremonia">
-        <h1 class="ceremonia">CELEBRACION</h1>
-        <h4 class="iglesia">Iglesia Principe de paz</h4>
-        <h4 class="esperamos">la celebracion sera el</h4>
-        <div class="container-fecha">
-            <h2>21 DIC</h2>
-            <h2>5:00 PM</h2>
-        </div>
-        <h4 class="aldea">Aldea las palmas</h4>
-        <h4 class="coatepeque">Coatepeque</h4>
-        <div class="container-ubicacion">
-            <button class="ubicacion" onclick="redirectToMaps()">VER UBICACION</button>
-        </div>
+      <h1 class="ceremonia">CELEBRACION</h1>
+      <h4 class="iglesia">Iglesia Principe de paz</h4>
+      <h4 class="esperamos">la celebracion sera el</h4>
+      <div class="container-fecha">
+        <h2>21 DIC</h2>
+        <h2>5:00 PM</h2>
+      </div>
+      <h4 class="aldea">Aldea las palmas</h4>
+      <h4 class="coatepeque">Coatepeque</h4>
+      <div class="container-ubicacion">
+        <button class="ubicacion" onclick="redirectToMaps()">
+          VER UBICACION
+        </button>
+      </div>
     </div>
     <div class="container-foto">
-        <div class="foto">
-            <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
-            <dotlottie-player src="https://lottie.host/1a23be6a-f7af-4442-95ec-9a641dc8e105/X01Rp3Fz2C.json" background="transparent" speed="0.7" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
-        </div>
-        <h1>Comparte tus fotos</h1>
-        <h3>Sube las fotos de la boda al album</h3>
-        <div class="container-link">
-            <button class="link-fotos" onclick="redirectToLink()">Sube tus fotos</button>
-            <button class="link-album" onclick="redirectToLink()">Ver Galeria</button>
-        </div>
+      <div class="foto">
+        <script
+          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+          type="module"
+        ></script>
+        <dotlottie-player
+          src="https://lottie.host/1a23be6a-f7af-4442-95ec-9a641dc8e105/X01Rp3Fz2C.json"
+          background="transparent"
+          speed="0.7"
+          style="width: 100%; height: 100%"
+          loop
+          autoplay
+        ></dotlottie-player>
+      </div>
+      <h1>Comparte tus fotos</h1>
+      <h3>Sube las fotos de la boda al album</h3>
+      <div class="container-link">
+        <button class="link-fotos" onclick="redirectToLink()">
+          Sube tus fotos
+        </button>
+        <button class="link-album" onclick="redirectToLink()">
+          Ver Galeria
+        </button>
+      </div>
     </div>
     <div class="container-nosotros">
-        <h2>NOSOTROS</h2>
-        <div class="imagenes">
-            <img src="./imagenes/Boda3.jpeg" alt="">
-            <img src="./imagenes/boda6.jpeg" alt="">
-            <img src="./imagenes/Boda2.jpeg" alt="">
-            <img src="./imagenes/boda4.jpeg" alt="">
-        </div>
+      <h2>NOSOTROS</h2>
+      <div class="imagenes">
+        <img src="./imagenes/imagen-1.jpg" alt="" />
+        <img src="./imagenes/imagen-2.jpg" alt="" />
+        <img src="./imagenes/imagen-3.jpg" alt="" />
+        <img src="./imagenes/imagen-5.jpg" alt="" />
+        <img src="./imagenes/Imagen-6.jpg" alt="" />
+        <img src="./imagenes/imagen-4.jpg" alt="" />
+        <img src="./imagenes/imagen-8.jpg" alt="">
+        <img src="./imagenes/imagen-9.jpg" alt="">
+      </div>
     </div>
     <div class="container-regalo">
-        <div class="regalo">
-            <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
-             <dotlottie-player src="https://lottie.host/65d5234b-c4a4-40bd-92bb-9e88b50c60b9/9Tk7QICXpw.json" background="transparent" speed="0.7" style="width: 100%; height: 100%;" loop autoplay></dotlottie-player>
-        </div>
-        <h2>REGALOS</h2>
-        <h4>El regalo es opcional, la asistencia es obligatoria</h4>
-        <h4></h4>
-        <h4>pero si quieren tener un detalle con nosotros</h4>
-        <h4>que mejor regalo</h4>
-        <h4>que ayudarnos a construir nuestro futuro.</h4>
+      <div class="regalo">
+        <script
+          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+          type="module"
+        ></script>
+        <dotlottie-player
+          src="https://lottie.host/65d5234b-c4a4-40bd-92bb-9e88b50c60b9/9Tk7QICXpw.json"
+          background="transparent"
+          speed="0.7"
+          style="width: 100%; height: 100%"
+          loop
+          autoplay
+        ></dotlottie-player>
+      </div>
+      <h2>REGALOS</h2>
+      <h4>El regalo es opcional, la asistencia es obligatoria</h4>
+      <h4></h4>
+      <h4>pero si quieren tener un detalle con nosotros</h4>
+      <h4>que mejor regalo</h4>
+      <h4>
+        que ayudarnos a construir nuestro futuro.
+        <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+<dotlottie-player src="https://lottie.host/3e801c9a-8095-476a-b14c-2029c1e5faae/HB8o5mSp4H.lottie" background="transparent" speed="0.7" style="width: 300px; height: 300px; margin-top: -100px;" loop autoplay></dotlottie-player>
+      </h4>
     </div>
     <div class="container-despedida">
-        <h1>Te esperamos</h1>
-        <h3>Gianfranco y Claudia</h3>
+      <h1>Te esperamos</h1>
+      <h3>Gianfranco y Claudia</h3>
     </div>
     <script src="./index.js"></script>
-</body>
-
+  </body>
 </html>
